# c-to-simproc-compiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ROADMAP.md
.github/workflows/: release.yml  scc-release.yml  sp-cli-release.yml  test.yml
include/scc/: lexer.h  token.h
scc/: CMakeLists.txt  README.md  main.cpp
scc/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
scc/parser/: parser.cpp  parser.h
scc/parser/ast/: ast-node.cpp  ast-node.h  ast-nodes.cpp  ast-nodes.h  ast.cpp  ast.h  expression-nodes.cpp  expression-nodes.h  nodes.cpp  nodes.h  statement-nodes.cpp  statement-nodes.h  visitor.h
scc/parser/visitors/: printer.cpp  printer.h
sp-cli/: CMakeLists.txt  README.md  main.cpp
sp-cli/const/: const.h
sp-cli/cpu/: cpu.cpp  cpu.h  instructions.h
sp-cli/memory/: ram.cpp  ram.h
sp-cli/register/: address.cpp  address.h  enum.h  flags.cpp  flags.h  general_purpose.cpp  general_purpose.h
sp-cli/util/: util.h
src/: lexer.cpp  main.cpp  token.cpp
tests/: CMakeLists.txt  main_test.cpp  sp_cpu_test.cpp  sp_memory_test.cpp
tests/scc/: ex_test.cpp
tests/sp-cli/: address_register_test.cpp  memory_test.cpp
tests/sp-cli/cmp/: bigger_test.cpp  equal_test.cpp  smaller_test.cpp
tests/sp-cli/float/add/: medium_almost_zero_test.cpp  medium_normal_test.cpp  medium_zero_test.cpp
